--- a/packages/assignment-1/package.json
+++ b/packages/assignment-1/package.json
@@ -4,10 +4,11 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "test": "vitest",
-    "test:coverage": "vitest run --coverage"
+    "test": "vitest --reporter=verbose",
+    "test:useState": "vitest --reporter=verbose -t 'useState >'",
+    "test:useMemo": "vitest --reporter=verbose -t 'useMemo, memo >'",
+    "test:useCallback": "vitest --reporter=verbose -t 'useCallback, memo > '",
+    "test:ui": "vitest --ui"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -22,12 +23,12 @@
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.3.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "@vitest/ui": "^1.6.0",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "jsdom": "^24.0.0",
     "typescript": "^5.2.2",
-    "vite": "^5.2.0",
-    "vitest": "^1.6.0",
-    "jsdom": "^24.0.0"
+    "vitest": "^1.6.0"
   }
 }
