--- a/packages/assignment-6/package.json
+++ b/packages/assignment-6/package.json
@@ -1,14 +1,19 @@
 {
-  "name": "assignment-5",
+  "name": "assignment-6",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "start": "vite",
-    "test": "vitest",
+    "test": "vitest run",
+    "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui",
+    "tsc": "tsc --noEmit",
     "build": "tsc -b && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
+    "preview": "vite preview --port 4173",
+    "lhci": "lhci autorun",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint:report": "eslint . --ext ts,tsx -o eslint-report"
   },
   "dependencies": {
     "react": "^18.3.1",
@@ -23,7 +28,9 @@
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "@vitest/coverage-v8": "^2.0.3",
     "@vitest/ui": "^1.6.0",
+    "@lhci/cli": "^0.14.0",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
